2009-03-15  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclPosixStr.c (Tcl_SignalId,Tcl_SignalMsg): [Patch 1513655]:
	Added support for SIGINFO, which is present on BSD platforms.

2009-03-14  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tcl.pc.in (new file):		[Patch 2243948] (hat0)
	* unix/configure.in, unix/Makefile.in: Added support for reporting
	Tcl's public build configuration via the pkg-config system. TEA is
	still the official mechanism though, in part because pkg-config is not
	universally supported across all Tcl's supported platforms.

2009-03-11  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic.c (TclNRCoroutineObjCmd): fix Tcl_Obj leak. 
	Diagnosis and fix thanks to GPS.

2009-03-09  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclCmdMZ.c (Tcl_TryObjCmd, TclNRTryObjCmd): Moved the
	implementation of [try] from Tcl code into C. Still lacks a bytecode
	version, but should be better than what was before.

2009-03-04  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclZlib.c (TclZlibCmd): Checksums are defined to be unsigned
	32-bit integers, use Tcl_WideInt to pass to scripts. [Bug 2662434]
	(ZlibStreamCmd, ChanGetOption): A few other related corrections.

2009-02-27  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tcl.decls:    [Bug 218977] Tcl_DbCkfree needs a return value
	* generic/tclCkalloc.c
	* generic/tclDecls.h    (regenerated)
	* generic/tclInt.decls: don't use CONST84/CONST86 here
	* generic/tclCompile.h: don't use CONST86 here, comment fixing.
	* generic/tclIO.h:      don't use CONST86 here, comment fixing.
	* generic/tclIntDecls.h (regenerated)

2009-02-25  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclUtil.c (TclStringMatchObj):	Revised the branching
	on the strObj->typePtr so that untyped values get converted to the
	"string" type and pass through the Unicode matcher.  [Bug 2613766]
	Also added checks to only perform "bytearray" optimization on pure
	bytearray values.  [Bug 2637173].
